--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.124.0",
+    "python-dotenv>=1.2.1",
+    "python-jose>=3.5.0",
 ]
